# KK_Lab

./: .gitignore  AGENTS.md  CLAUDE.md  DIRECTORY_STRUCTURE.txt  debug-cmw-scpi-realhw.md  debug_config.py  log_config.py  main.py  pyproject.toml  requirements.txt  version.py
.ai/: memory.md
chips/: __init__.py  bes1811_pmu.py
core/: AGENTS.md  __init__.py  auto_baud_detector.py  bes1811_pmu_controller.py  data_collector.py  test_manager.py
helps/: charger_config_traverse.html  charger_iterm.html  charger_regulation_voltage.html  charger_status_register.html  consumption_test.html  custom_test.html  datalog.html  module_test_dcdc.html  module_test_ldo.html  orchestrator.html  oscilloscope.html  pmu_clk.html  pmu_dcdc_efficiency.html  pmu_gpadc.html  pmu_is_gain.html  pmu_oscp.html  pmu_output_voltage.html  power_analyser.html  thermal_chamber.html  vmin_hunter.html
hooks/: hook-pyqtgraph.py
instruments/: AGENTS.md  __init__.py  ch341t.py  factory.py  mso64b.py  n6705c.py  visa_instrument.py
scripts/: _gen_chip_yaml.py  ai_smoke_test.py  waveform_window_test.py
spec/: _standalone_ui_common.py  chamber_control_ui.spec  charger_config_traverse.spec  charger_iterm.spec  charger_regulation_voltage.spec  charger_status_register.spec  charger_test.spec  consumption_auto_test.spec  consumption_high_low_temp.spec  consumption_test.spec  custom_test.spec  kk_lab.spec  n6705c_analyser.spec  n6705c_datalog.spec  orchestrator.spec  oscilloscope.spec  pmu_clk.spec  pmu_dcdc_efficiency.spec  pmu_gpadc.spec  pmu_is_gain.spec  pmu_oscp.spec  pmu_output_voltage.spec  (+2 more)
(+896 files in other folders)
