[project]
name = "kk-lab"
version = "1.0.0"
description = "KK Lab - BES芯片功耗测试工具"
requires-python = ">=3.10"
dependencies = [
    "PySide6==6.6.0",
    "pyqtgraph==0.13.3",
    "pyvisa==1.13.0",
    "pyvisa-py==0.7.0",
    "pyusb==1.3.1",
    "libusb-package==1.0.26.3",
    "pyserial==3.5",
    "openpyxl==3.1.2",
    "numpy>=1.24.0",
]

[project.scripts]
kk-lab = "main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"
